Post v21.12.0
-------------

OVN v21.12.0 - 22 Dec 2021
--------------------------
  - Set ignore_lsp_down to true as default, so that ARP responder flows are
    installed together with other flows when a logical switch port is created,
    without having to wait for the port to be UP.  CMS should set it to false
    if not desired.
  - Added Load_Balancer_Group support, which simplifies large scale
    configurations of load balancers.
  - Introduced infrastructure for VIF plug providers.  When OVN is linked with
    an appropriate VIF plug provider CMS can request OVN to plug lports.  This
    is particularly useful in topologies where the ovn-controller process is
    running on SmartNIC control plane CPUs.  Please refer to
    Documentation/topics/vif-plug-providers/vif-plug-providers.rst for more
    information.
  - Added Logical_Router_Port "gateway_mtu_bypass" option.
  - Added new "inc-engine/recompute" command to all incremental processing
    engine clients (ovn-northd and ovn-controller).
  - ovn-controller: Add configuration knob, through OVS external-id
    "ovn-trim-timeout-ms" to allow specifiying an lflow cache inactivity
    timeout after which ovn-controller should trim memory.

OVN v21.09.0 - 01 Oct 2021
--------------------------
  - Added Control Plane Protection support (control plane traffic metering).
  - Added path MTU discovery for ingress traffic originated outside of the
    cluster.
  - Introduced a new "label" field for "allow" and "allow-related" ACLs
    which helps in debugging/backtracking the ACL which allowed a particular
    connection.
  - Allow static routes without nexthops.
  - Enabled logical dp groups as a default.  CMS should disable it if not
    desired.
  - Added support for multiple routing tables in Logical Router Static Routes
    and LRPs. OVN Interconnection supports routes' route tables as well.
    This requires to update schemas for OVN_Northdbound and OVN_IC_Southbound
    DBs.

OVN v21.06.0 - 18 Jun 2021