@@ -1,5 +1,7 @@
 Post v21.12.0
 -------------
+  - When configured to log packtes matching ACLs, log the direction (logical
+    pipeline) too.
 
 OVN v21.12.0 - 22 Dec 2021
 --------------------------
